Добавили заголовок, стилизовали его

--- a/google.html
+++ b/google.html
@@ -17,10 +17,16 @@
         .google {color: green}
         .yahoo {color: blue}
         .rambler {color: red}
+        .title {color: white;
+        margin-bottom: 20px;
+         border:none;
+        border-bottom:2px solid red}
     </style>
 
 </head>
 <body>
+
+<div class="title"> Список поисковых систем: </div>
 
 <div class="google"> Google it: </div>
 <form action="https://www.google.com/search">
