--- a/google.html
+++ b/google.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <style>
         body {
-            font-family: Gisha;
+            font-family: "Times New Roman";
             background: bisque;
         }
         div {
