--- a/level4.html
+++ b/level4.html
@@ -2,24 +2,26 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 
 <head>
+<body>
+<link href="//db.onlinewebfonts.com/c/549dddcecfd3e61f35f4fde66019618f?family=Bookshelf+Symbol+7" rel="stylesheet" type=
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="main.css" rel="stylesheet"/>
 
     <style>
-         body{
+         {
+         font-family: "Times New Roman";
+         }
 
-            font-family: "Times New Roman";}
-        
 
 </style>
 
-<body>
+
 
     <div id="container">
         <div id="head">
             <div class="headContainer">
-                <p align="center" style="color: black; font-size:25px" >
+                <p align="center" style="..." >
                 Форма регистрации
                 </p>
 
@@ -85,11 +87,10 @@
                     </div>
                 </div>
             </div>
-
+        </div>
     </div>
 
-    </div>
-
+    </body>
 </head>
 
-</body>
+
